--- a/front/src/app/components/navbar/navbar.html
+++ b/front/src/app/components/navbar/navbar.html
@@ -24,6 +24,11 @@
         <i class="bi bi-person-circle"></i> Moj Profil
       </a>
 
+      <!-- DODAJ OVDE ADMIN LINK -->
+      <a *ngIf="auth.uloga === 'administrator'" routerLink="/admin" class="nav-profile-link">
+        <i class="bi bi-speedometer2"></i> Admin
+      </a>
+
       <span class="user-role">[{{ auth.uloga }}]</span>
 
       <a (click)="auth.odjava()" class="logout-link" style="cursor: pointer"
