--- a/front/src/app/components/navbar/navbar.html
+++ b/front/src/app/components/navbar/navbar.html
@@ -24,8 +24,15 @@
         <i class="bi bi-person-circle"></i> Moj Profil
       </a>
 
-      <!-- DODAJ OVDE ADMIN LINK -->
-      <a *ngIf="auth.uloga === 'administrator'" routerLink="/admin" class="nav-profile-link">
+      <!-- DODAJ OVDE LINK ZA OMIJENE -->
+      <a routerLink="/favorites" class="nav-profile-link">
+        <i class="bi bi-heart-fill"></i> Omiljeni
+      </a>
+
+      <!-- ADMIN LINK (samo za administratore) -->
+      <a *ngIf="auth.uloga === 'administrator'" 
+         routerLink="/admin" 
+         class="nav-profile-link">
         <i class="bi bi-speedometer2"></i> Admin
       </a>
 
