--- a/front/src/app/components/admin-panel/admin-panel.component.html
+++ b/front/src/app/components/admin-panel/admin-panel.component.html
@@ -64,11 +64,11 @@
         </div>
       </div>
       <div>
-        <button (click)="odobriAutora(zahtev.user_id, zahtev.email)" 
-                class="btn btn-success btn-sm me-2">
+        <button (click)="odobriZahtev(zahtev.id)" 
+            class="btn btn-success btn-sm me-2">
           <i class="bi bi-check-lg"></i> Odobri
         </button>
-        <button (click)="odbijZahtev(zahtev.user_id, zahtev.email)" 
+        <button (click)="odbijZahtev(zahtev.id)" 
                 class="btn btn-danger btn-sm">
           <i class="bi bi-x-lg"></i> Odbij
         </button>
